# beantab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
example/: example.beancount  transactions.bean
example/balances/: balances-2024-03-15.bean  balances-2024-03-29.bean
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: app.tsx  extension.ts  router.ts
frontend/src/api/: api.ts  balances.ts  save.ts
frontend/src/components/: AccountFilter.tsx  AdditionalDatesInput.tsx  BalanceTypeChip.tsx  BeanTabGrid.tsx  Dashboard.tsx  HelpDialog.tsx  ModifiedCell.tsx  SaveChangesDialog.tsx  SettingsDialog.tsx  TableEditControls.tsx
frontend/src/constants/: balanceTypes.ts
frontend/src/routes/: __root.tsx  dashboard.tsx
frontend/src/stores/: beanTabStore.ts
frontend/src/utils/: currencyDisplayUtils.ts
src/beantab/: BeanTab.js  BeantabFileManager.py  __init__.py  models.py  utils.py
src/beantab/templates/: Beantab.html  style.css
tests/: test_beantab_file_manager.py
