[project]
name = "beantab"
dynamic = ["version"]
description = "BeanTab - Spreadsheet-like balance manager for Fava and Beancount"
authors = [
    { name = "Evernight" }
]
dependencies = [
    "beancount-lazy-plugins",
    "fava>=1.30.3",
]
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "GPL-2.0"}

[project.urls]
Source = "https://github.com/Evernight/beantab"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beantab = [
    "BeanTab.js",
    "templates/*.html",
    "templates/*.css",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

[tool.pylint.'messages control']
disable = [
    "broad-exception-raised",
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-else-return",
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-return-statements",
]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 120

extend-exclude = [
    "frontend/node_modules",
    "src/beantab.egg-info",
]

extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
extend-select = ["I"]